objects/AcctSeed__Bank_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>AcctSeed__Account_Id__c</fullName>
        <description>The account from which the transaction was made. This is basically the primary key of the account resource.</description>
        <inlineHelpText>The account from which the transaction was made. This is the primary key of the account resource.</inlineHelpText>
        <label>Account Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <description>The amount of the transaction as it appears at the FI site.</description>
        <inlineHelpText>The amount of the transaction as it appears at the financial institution site.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Transaction_Id__c</fullName>
        <description>An unique identifier for the transaction.</description>
        <inlineHelpText>A unique identifier for the transaction. The combination of the id and account container are unique in the system.</inlineHelpText>
        <label>Bank Transaction Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Base_Type__c</fullName>
        <description>Indicates if the transaction appears as a debit or a credit transaction in the account.</description>
        <inlineHelpText>How the transaction appears on the FI site (debit v credit). Bank-Credit/Debit=Increase/Decrease. CreditCard - Credit/Debit=Decrease/Increase.</inlineHelpText>
        <label>Base Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Category_ID__c</fullName>
        <inlineHelpText>The id of the category assigned to the transaction.</inlineHelpText>
        <label>Category ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Category_Type2__c</fullName>
        <description>Transaction Category Type might be set as either TRANSFER, DEFERRED_COMPENSATION, UNCATEGORIZE, INCOME or EXPENSE</description>
        <inlineHelpText>The category type of the category assigned to the transaction.</inlineHelpText>
        <label>Category Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Category_Type__c</fullName>
        <inlineHelpText>The category type of the category assigned to the transaction.</inlineHelpText>
        <label>Category Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>expense</fullName>
                </value>
                <value>
                    <fullName>income</fullName>
                </value>
                <value>
                    <fullName>transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Category__c</fullName>
        <inlineHelpText>The name of the category assigned to the transaction.</inlineHelpText>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Check_Number__c</fullName>
        <inlineHelpText>The check number of the transaction as it appears on the financial institution site.</inlineHelpText>
        <label>Check Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Container__c</fullName>
        <description>The account&apos;s container.</description>
        <inlineHelpText>This is a type of financial account.</inlineHelpText>
        <label>Container</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Date__c</fullName>
        <inlineHelpText>The post date or transaction date on the FI site. Post Date is higher priority than transaction date.</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Description__c</fullName>
        <inlineHelpText>Original transaction description as it appears at the financial institution site.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Detail_Category_Id__c</fullName>
        <inlineHelpText>The id of the detail category that is assigned to the transaction.</inlineHelpText>
        <label>Detail Category Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Detail_Category__c</fullName>
        <inlineHelpText>The name of the detail category that is assigned to the transaction.</inlineHelpText>
        <label>Detail Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Mapping__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the GLAM record that is mapped to the Bank Transaction.</inlineHelpText>
        <label>GL Account Mapping</label>
        <referenceTo>AcctSeed__GL_Account_Mapping__c</referenceTo>
        <relationshipLabel>Bank Transactions</relationshipLabel>
        <relationshipName>Bank_Transactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__High_Level_Category_Id__c</fullName>
        <inlineHelpText>The id of the high level category assigned to the transaction.</inlineHelpText>
        <label>High Level Category Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__High_Level_Category__c</fullName>
        <inlineHelpText>The name of the high level category assigned to the transaction.</inlineHelpText>
        <label>High Level Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The combination of the id and account container are unique in the system.</description>
        <externalId>true</externalId>
        <inlineHelpText>The combination of the id and account container are unique in the system.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AcctSeed__Memo__c</fullName>
        <description>Additional notes provided by the user for a particular transaction through application or API services.</description>
        <inlineHelpText>Additional notes provided by the user for a particular transaction through application or API services.</inlineHelpText>
        <label>Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Merchant_Category__c</fullName>
        <description>Additional category information from the Yodlee reference data, if available.</description>
        <inlineHelpText>Additional category information from the Yodlee reference data, if available.</inlineHelpText>
        <label>Merchant Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Merchant_Id__c</fullName>
        <inlineHelpText>The id of the merchant associated with the transaction.</inlineHelpText>
        <label>Merchant Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Merchant_Name__c</fullName>
        <inlineHelpText>The name of the merchant associated with the transaction.</inlineHelpText>
        <label>Merchant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Merchant_Type2__c</fullName>
        <description>Merchant Type can be set as BILLERS, SUBSCRIPTION or OTHERS</description>
        <inlineHelpText>Provides further information about a transaction, i.e., if the transaction is carried out on a biller or a subscriber.</inlineHelpText>
        <label>Merchant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Merchant_Type__c</fullName>
        <inlineHelpText>Provides further information about a transaction, i.e., if the transaction is carried out on a biller or a subscriber.</inlineHelpText>
        <label>Merchant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billers</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Parent_Category_Id__c</fullName>
        <description>The parentCategoryId of the category assigned to the transaction.
Note: This field will be provided in the response if the transaction is assigned to a user-created category.</description>
        <inlineHelpText>The parentCategoryId of the category assigned to the transaction.
Note: This field will be provided in the response if the transaction is assigned to a user-created category.</inlineHelpText>
        <label>Parent Category Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Post_Date__c</fullName>
        <description>The date on which the transaction is posted to the account.</description>
        <inlineHelpText>The date on which the transaction is posted to the account.</inlineHelpText>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Running_Balance__c</fullName>
        <description>The running balance in an account indicates the balance of the account after every transaction.</description>
        <inlineHelpText>The running balance in an account indicates the balance of the account after every transaction.</inlineHelpText>
        <label>Running Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Simple_Description__c</fullName>
        <description>simplified transaction description</description>
        <inlineHelpText>Simplified transaction description by Yodlee.</inlineHelpText>
        <label>Simple Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Source__c</fullName>
        <inlineHelpText>Determines the source from which this transaction was imported.  Possible values: Yodlee, Financial File Import</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yodlee</fullName>
                </value>
                <value>
                    <fullName>Financial File Import</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>The current status of this transaction in the system.  Possible values: Unmatched, Added, Matched, Deleted, Removed</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unmatched</fullName>
                    <default>true</default>
                    <label>Unmatched</label>
                </value>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Sub_Type__c</fullName>
        <description>A more detailed classification that provides further information on the type of transaction; examples include purchases, payments, etc.</description>
        <inlineHelpText>A more detailed classification that provides further information on the type of transaction; examples include purchases, payments, etc.</inlineHelpText>
        <label>Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Transaction_Date__c</fullName>
        <description>The date the transaction happens in the account.</description>
        <inlineHelpText>The date the transaction happens in the account.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <description>Describes the nature of the intent behind the transaction, some examples being payments, purchases, charges &amp; fees, etc.</description>
        <inlineHelpText>Describes the nature of the intent behind the transaction, some examples being payments, purchases, charges &amp; fees, etc.</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank Transaction</label>
    <nameField>
        <displayFormat>BT-{00000}</displayFormat>
        <label>Bank Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>